Name:                biostockholm
Version:             0.2
Synopsis:            Reading and writing Stockholm files (multiple sequence alignment, used by Rfam and Infernal).
License:             BSD3
License-file:        LICENSE
Author:              Felipe Lessa
Maintainer:          felipe.lessa@gmail.com
Category:            Bioinformatics
Build-type:          Simple
Cabal-version:       >=1.8
Description:
  Parsing and pretty printing of files in Stockholm 1.0 format.  See:
  .
  * <http://sonnhammer.sbc.su.se/Stockholm.html>
  .
  * <ftp://ftp.sanger.ac.uk/pub/databases/Pfam/current_release/relnotes.txt>
  .
  * <http://en.wikipedia.org/wiki/Stockholm_format>

Source-repository head
  Type:     darcs
  Location: http://patch-tag.com/r/felipe/biostockholm

Library
  Hs-Source-Dirs: src
  Exposed-modules:
    Bio.Sequence.Stockholm
    Bio.Sequence.Stockholm.Document
    Bio.Sequence.Stockholm.Stream
  Ghc-Options: -Wall
  Build-depends:
        base               >= 3     && < 5
      , containers         >= 0.2   && < 0.5
      , bytestring         == 0.9.*
      , deepseq            >= 1.1   && < 1.3
      , conduit            == 0.1.*
      , attoparsec         == 0.10.*
      , attoparsec-conduit == 0.0.*
      , blaze-builder      == 0.3.*
      , blaze-builder-conduit == 0.0.*

      , biocore            >= 0.1   && < 0.3

Test-suite runtests
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: tests
  Main-is: runtests.hs
  Ghc-Options: -Wall
  Build-depends:
        base               >= 3     && < 5
      , containers         >= 0.2   && < 0.5
      , bytestring         == 0.9.*
      , deepseq            >= 1.1   && < 1.3
      , conduit            == 0.1.*
      , attoparsec         == 0.10.*
      , attoparsec-conduit == 0.0.*

      , biocore            >= 0.1   && < 0.3

      , hspec              == 0.9.*
      , HUnit              == 1.2.*

      , biostockholm
